additions on multi-particle systems

--- a/src/sections/04_Atoms_Solids.tex
+++ b/src/sections/04_Atoms_Solids.tex
@@ -214,10 +214,10 @@ and one has for $\chi(s)$ and two identical spins $s=\frac{1}{2}$ the spin state
            \uparrow \uparrow                                                        \\
            \downarrow \downarrow                                                    \\
            \frac{1}{\sqrt{2}}\left(\uparrow \downarrow + \downarrow \uparrow\right) \\
-       \end{rcases} \chi_{\mathrm{triplet}}(s)\text{: symmetric w.r.t.\ ex.} \\
+       \end{rcases} \chi_{\mathrm{triplet}}(s)\text{: symmetric w.r.t.\ ex.\ } (S=1) \\
      & \begin{rcases}
            \frac{1}{\sqrt{2}}\left(\uparrow \downarrow - \downarrow \uparrow\right)
-       \end{rcases} \chi_{\mathrm{singlet}}(s) \text{: antisymmetric w.r.t.\ ex.}
+       \end{rcases} \chi_{\mathrm{singlet}}(s) \text{: antisymmetric w.r.t.\ ex.\ }(S=0)
 \end{align*}
 which implies that the overall wave function $\psi(\mathbf{r_1},\mathbf{r_2})=\psi(\mathbf{r})\chi(s)$ of hydrogen becomes
 \begin{equation*}
@@ -236,15 +236,11 @@ to achieve a stable chemical bond.
 
 The exchange symmetry of the overall wave function of
 \begin{itemize}
-    \item identical \textbf{fermions is symmetric} w.r.t.\ exchange with
+    \item identical \textbf{bosons is symmetric} w.r.t.\ exchange with
+    \item identical \textbf{fermions is antisymmetric} w.r.t.\ exchange with
           \begin{align*}
               \psi & = \psi_{+}\cdot \chi_{\mathrm{singlet}}(s) \\
               \psi & = \psi_{-}\cdot \chi_{\mathrm{triplet}}(s)
-          \end{align*}
-    \item identical \textbf{bosons is antisymmetric} w.r.t.\ exchange with
-          \begin{align*}
-              \psi & = \psi_{+}\cdot \chi_{\mathrm{triplet}}(s) \\
-              \psi & = \psi_{-}\cdot \chi_{\mathrm{singlet}}(s)
           \end{align*}
 \end{itemize}
 
@@ -461,7 +457,7 @@ Given two orbital or spin angular momenta $j_1, j_2$ one has
 \begin{equation*}
     j_{\mathrm{total}}=(j_1+j_2),\dots,|j_1-j_2|
 \end{equation*}
-with integer steps in between.\\ 
+with integer steps in between.\\
 Remarks:
 \begin{itemize}
     \item Describes combinations to fill partially-filled subshells (many possible combinations).
