--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -40,7 +40,7 @@ See \textit{Useful Info Sheet}
 \begin{equation*}
     Y_{\ell}^{m_\ell}(\theta, \phi) = \epsilon\sqrt{\frac{2\ell+1}{4\pi}\frac{(\ell-|m_\ell|)!}{(\ell+|m_\ell|)!}}\:e^{im_\ell\phi}\:P_{\ell}^{m_\ell}(\cos(\theta))
 \end{equation*}
-where
+% where
 \begin{equation*}
     \epsilon = \begin{cases}
         {(-1)}^{m_\ell} & m_\ell > 0    \\
@@ -55,7 +55,7 @@ Explicit solution depends of the potential $V$.
 \begin{equation*}
     \frac{-\hbar^2}{2m}\:\frac{d^2u}{dr^2}+\underbrace{\left[V(r)+\frac{-\hbar^2}{2m}\frac{\ell(\ell+1)}{r^2}\right]}_{V_{\text{eff}}}u = Eu
 \end{equation*}
-with
+% with
 \begin{equation*}
     u(r) = rR(r)
 \end{equation*}
