added notes from old exams (16/17/18)

--- a/src/sections/final_cheatsheet/fin_Approx.tex
+++ b/src/sections/final_cheatsheet/fin_Approx.tex
@@ -36,7 +36,7 @@
 \end{equation*}
 
 \subsubsection{Degenerate Perturbation Theory}
-\textbf{Two} different unpertubed states are degenereate if they share their eigenvalues ($E_1^{(0)} = E_2^{(0)}$).
+\textbf{Two} different unpertubed states are degenerate if they share their eigenvalues ($E_1^{(0)} = E_2^{(0)}$).
 
 \newpar{}
 \ptitle{1st Order Approximation}
@@ -125,7 +125,7 @@ The variational principle theorem then states:
 
 \ptitle{Steps}
 \begin{enumerate}
-    \item Set trial function e.g.: $\Psi_{\mathrm{trial}}={\left(\frac{\alpha}{\pi}\right)}^{1/4}\exp\left(\frac{-\alpha x^{2}}{2}\right)$
+    \item Set trial function e.g.: $\Psi_{\mathrm{trial}}={\left(\frac{\alpha}{\pi}\right)}^{1/4}\exp\left(\frac{-\alpha x^{2}}{2}\right)$\newline (1s orbital of HO)
     \item Calculate expectation: $\left\langle H\right\rangle= \left\langle\psi_{\mathrm{trial}}\right|\widehat{H} \psi_{\mathrm{trial}}\left.\right\rangle$
     \item Minimize: $\frac{d}{d \alpha} \left\langle H\right\rangle=0\;\to\; \alpha_{\min}$ 
     \item $E_{gs}\leq {\left\langle H \right\rangle}_{\alpha_{\min}}$
