--- a/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
+++ b/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
@@ -56,7 +56,7 @@ The overall solutions are products
 \end{equation*}
 
 \newpar{}
-\ptitle{Indistinguishable Particles}
+\ptitle{Indistinguishable Particles} (bosons, fermions)
 
 The overall solutions are linear combinations (sym.\ or asym.):
 \begin{align*}
@@ -130,8 +130,8 @@ Because $\psi$ of fermions is antisymmetric:
 \newpar{}
 \ptitle{Pauli Exclusion Principle}
 
-One cannot have two electrons in exactly the same state (same QN) and still have antisymmetry w.r.t.\ exchange.
-
+One cannot have two fermions in exactly the same state (same QN) and still have antisymmetry w.r.t.\ exchange. 
+(Does not apply to bosons)
 \subsection{Wavefunction for Fermions}
 \noindent\begin{equation*}
     \psi_{n,\ell,m_\ell,m_s} = A\cdot R_{n\ell}(r)\cdot Y_\ell^{m_\ell}(\theta, \varphi) \cdot \left|s,m_s \right\rangle
