--- a/src/sections/final_cheatsheet/fin_Appendix.tex
+++ b/src/sections/final_cheatsheet/fin_Appendix.tex
@@ -9,7 +9,7 @@
          & \int e^{\lambda x}\cos(ax+b)dx &  & =\frac{e^{\lambda x}}{a^2+\lambda ^2}\left(\lambda \cos(ax+b)+a\sin(ax+b)\right)+C \\
          & \int x \cdot e^{\lambda x}dx   &  & =(\frac{\lambda x-1}{\lambda ^2})\cdot e^{\lambda x}+C                             \\
          & \int x^2 \cdot e^{\lambda x}dx &  & =(\frac{\lambda ^2x^2-2\lambda x+2}{\lambda ^3})\cdot e^{\lambda x}                \\
-         & \int x\cdot e^{x^2}dx          &  & =\frac{1}{2}\cdot e^{x^2}+C
+         & \int x\cdot e^{\lambda x^2}dx  &  & =\frac{1}{2\lambda}\cdot e^{\lambda x^2}+C
     \end{align*}
 \end{footnotesize}
 
@@ -43,10 +43,10 @@ more on \textit{Useful Info Sheet}
 \subsubsection[Associated Legendre Functions]{Associated Legendre Functions for $x=\cos(\theta)$}
 \begin{footnotesize}
     \noindent\begin{align*}
-        P_{0}^{0} & =1                       & P_{2}^{0} & =\frac{1}{2}(3 \cos^{2}\theta-1)             \\
-        P_{1}^{1} & =-\sin\theta             & P_{3}^{3} & =-15 \sin\theta(1-\cos^{2}\theta)            \\
-        P_{1}^{0} & =\cos\theta              & P_{3}^{2} & =15 \sin^{2}\theta \cos\theta                \\
-        P_{2}^{2} & =3 \sin^{2}\theta        & P_{3}^{1} & =-\frac{3}{2}\sin\theta (5 \cos^{2}\theta-1) \\
-        P_{2}^{1} & =-3 \sin\theta\cos\theta & P_{3}^{0} & =\frac{1}{2} (5 \cos^{3}\theta-3 \cos\theta)
+        P_{0}^{0}     & =1                       & P_{2}^{0}     & =\frac{1}{2}(3 \cos^{2}\theta-1)             \\
+        P_{1}^{\pm 1} & =-\sin\theta             & P_{3}^{\pm 3} & =-15 \sin\theta(1-\cos^{2}\theta)            \\
+        P_{1}^{0}     & =\cos\theta              & P_{3}^{\pm 2} & =15 \sin^{2}\theta \cos\theta                \\
+        P_{2}^{\pm 2} & =3 \sin^{2}\theta        & P_{3}^{\pm 1} & =-\frac{3}{2}\sin\theta (5 \cos^{2}\theta-1) \\
+        P_{2}^{\pm 1} & =-3 \sin\theta\cos\theta & P_{3}^{0}     & =\frac{1}{2} (5 \cos^{3}\theta-3 \cos\theta)
     \end{align*}
 \end{footnotesize}
