--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -66,15 +66,16 @@ Explicit solution depends of the potential $V$.
 %     \phi   & = \text{azimuthal angle} \\
 %     r      & = \text{radius}
 % \end{align*}
-% \begin{align*}
-%     \mathbf{\nabla} & =\mathbf{u}_{r}\frac{\partial}{\partial r}+\frac{\mathbf{u}_{\theta}}{r}\frac{\partial}{\partial\theta}+\frac{\mathbf{u}_{\phi}}{r\sin\theta}\frac{\partial}{\partial\phi}                                      \\
-%     \nabla^2        & =\frac{1}{r^2}\frac{\partial}{\partial r}\left(r^2\frac{\partial}{\partial r}\right) + \frac{1}{r^2\sin(\theta)}\frac{\partial}{\partial\theta}\left(\sin(\theta)\frac{\partial}{\partial \theta}\right) \ldots \\
-%                     & + \frac{1}{r^2\sin^2(\theta)}\left(\frac{\partial^2}{\partial \phi^2}\right)
-% \end{align*}
-\begin{align*}
-    d^2\mathbf{r} & = \sin(\theta)d\theta\:d\phi                     \\
-    d^3\mathbf{r} & = dx\:dy\:dz = r^2\sin(\theta)dr\:d\theta\:d\phi
-\end{align*}
+{\footnotesize
+    \begin{align*}
+    % \mathbf{\nabla} & =\mathbf{u}_{r}\frac{\partial}{\partial r}+\frac{\mathbf{u}_{\theta}}{r}\frac{\partial}{\partial\theta}+\frac{\mathbf{u}_{\phi}}{r\sin\theta}\frac{\partial}{\partial\phi}                                      \\
+    \nabla^2  =\frac{1}{r^2}\frac{\partial}{\partial r}\left(r^2\frac{\partial}{\partial r}\right) + \frac{1}{r^2\sin(\theta)}\frac{\partial}{\partial\theta}\left(\sin(\theta)\frac{\partial}{\partial \theta}\right) 
+              + \frac{1}{r^2\sin^2(\theta)}\left(\frac{\partial^2}{\partial \phi^2}\right)
+\end{align*}}
+\begin{equation*}
+    d^2\mathbf{r} = \sin(\theta)d\theta\:d\phi; \qquad
+    d^3\mathbf{r} = dx\:dy\:dz = r^2\sin(\theta)dr\:d\theta\:d\phi
+\end{equation*}
 
 \textbf{Normalization}
 
@@ -271,13 +272,13 @@ where the probability of measuring a certain spin (assuming $\left|\lambda\right
 With the two eigenstates of electron as base
 \begin{equation*}
     \left|\frac{1}{2},\quad +\frac{1}{2}\right> \rightarrow \left(\begin{matrix}
-                                                                            1 \\
-                                                                            0
-                                                                        \end{matrix}\right),\quad 
+            1 \\
+            0
+        \end{matrix}\right),\quad
     \left|\frac{1}{2},\quad -\frac{1}{2}\right> \rightarrow \left(\begin{matrix}
-                                                                            0 \\
-                                                                            1
-                                                                        \end{matrix}\right)
+            0 \\
+            1
+        \end{matrix}\right)
 \end{equation*}
 \textbf{spin relative to z-axis} can be written as
 \begin{align*}
@@ -314,11 +315,11 @@ Note that
 and are in z-axis basis given by the \textbf{non-hermitian} matrices
 \begin{equation*}
     \widehat{S}_{+}  \rightarrow \hbar\begin{bmatrix}
-                                           0 & 1 \\
-                                           0 & 0
-                                       \end{bmatrix},\quad
+        0 & 1 \\
+        0 & 0
+    \end{bmatrix},\quad
     \widehat{S}_{-}  \rightarrow \hbar\begin{bmatrix}
-                                           0 & 0 \\
-                                           1 & 0
-                                       \end{bmatrix}
+        0 & 0 \\
+        1 & 0
+    \end{bmatrix}
 \end{equation*}
