remarks perturbation theory

--- a/src/sections/05_Approx_Methods.tex
+++ b/src/sections/05_Approx_Methods.tex
@@ -127,6 +127,13 @@ This solution arises from finding a suitable basis for the degenerate states, i.
 \ptitle{Remarks}
 \begin{itemize}
     \item As we have degenerate states, we need two corrections (the $\pm$): one for each state's energy (eigenstate).
+    \item In an unperturbed situation the two states have exactly the same energy (degenerate).
+    \item The perturbation ``splits degeneracy up'' into 2 non-degenerate states. Example:
+    \begin{itemize}
+        \item Apply an external magnetic field to two electrons with the same energy level.
+        \item The electrons begin to align into opposite directions.     % TODO. The example from Norris. I guess alignment happens per definition due to m_l (or is it spin?)
+        \item Diagonalization finds the most suitable basis i.e.\ the one in direction of the external magnetic field.
+    \end{itemize}
 \end{itemize}
 
 \paragraph{n-Fold Degeneracies}
