--- a/src/sections/final_cheatsheet/fin_Approx.tex
+++ b/src/sections/final_cheatsheet/fin_Approx.tex
@@ -40,6 +40,7 @@
 
 \newpar{}
 \ptitle{1st Order Approximation}
+Perturbation ``splits degeneracy up'' into 2 non-degenerate states:
 \noindent\begin{gather*}
     E_1 = E_1^{(0)} + E_{-}^{(1)} \quad < \quad E_2 = E_2^{(0)} + E_{+}^{(1)}\\
     E_{\pm}^{(1)}=\frac{1}{2}\left[W_{aa}+W_{bb}\pm\sqrt{{(W_{aa}-W_{bb})}^{2}+4 |W_{ab}|^{2}}\right]\\
