--- a/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
+++ b/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
@@ -1,5 +1,11 @@
 \section{Multiple Particle Systems}
-\subsection{Z-particle Systems}
+\subsection{Z-particle Systemss}
+\subsubsection{Hydrogenic States}
+In case of $Z$ protons but only $1$ electron one has
+\begin{equation*}
+    E_n = -\left[\frac{m}{2\hbar^2}{\left(\frac{Z e^2}{4\pi\epsilon_0}\right)}^2\right]\frac{1}{n^2} = \frac{E_1}{n^2}
+\end{equation*}
+\subsubsection{Multi-Electron Systems}
 In a general multi-particle system (e.g.\ atom with $Z$ protons) the Hamiltonian is given by
     {\small     % Smaller font
         \begin{equation*}
@@ -123,14 +129,14 @@ One has for $\chi(s)$ and two identical spins $s=\frac{1}{2}$ the spin states
 \end{align*}
 Because $\psi$ of fermions is antisymmetric:
 \noindent\begin{align*}
-    \psi & = \psi_{+}\cdot \chi_{\mathrm{singlet}}(s) &  & \text{stable chemical bond}        \\
+    \psi & = \psi_{+}\cdot \chi_{\mathrm{singlet}}(s) &  & \text{stable chemical bond}         \\
     \psi & = \psi_{-}\cdot \chi_{\mathrm{triplet}}(s) &  & \text{highe r energy (antibonding)}
 \end{align*}
- 
+
 \newpar{}
 \ptitle{Pauli Exclusion Principle}
 
-One cannot have two fermions in exactly the same state (same QN) and still have antisymmetry w.r.t.\ exchange. 
+One cannot have two fermions in exactly the same state (same QN) and still have antisymmetry w.r.t.\ exchange.
 (Does not apply to bosons)
 \subsection{Wavefunction for Fermions}
 \noindent\begin{equation*}
